--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@
     box-sizing: border-box;
 }
 
-a {
-    color: #333;
-    text-decoration: none;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background: #e7e7e7;
 }
 
-body {
-    background: #ccc;
+a {
+    color: black;
+    text-decoration: none;
 }
 
 .container {
@@ -25,6 +26,7 @@ body {
 .container h1 {
     margin-top: 5rem;
     font-size: 1.6rem;
+    
 }
 
 .tag-container {
@@ -45,6 +47,133 @@ body {
     margin-bottom: 10px;
 }
 
+/* Header */
+
+.header {
+    background: url('stephan-valentin-LbUzPqxPUAs-unsplash.jpg') no-repeat center center/cover;
+    height: 70vh;
+    position: relative;
+    color: #fff;
+}
+
+.header * {
+    z-index: 10;
+}
+
+#profile-photo img {
+    /* display: inline-block; */
+    width: 30%;
+    border-radius: 50%;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height:100%;
+    padding:0px 20px;
+    color: #333;
+}
+
+.content h1 {
+    color: #e0e9e9;
+    font-weight: bold;
+}
+
+#description {
+    border-radius: 5px;
+    color: #b4c0d2;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+/* Navbar */
+/* .navbar.top {
+    background: transparent;
+} */
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #333;
+    color:#fff;
+    opacity: 0.8;
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    top: 0px;
+    padding: 0 30px;
+    transition: 0.5s;
+}
+
+.navbar a {
+    color: #fff;
+    padding: 10px 20px;
+    margin: 0 5px;
+}
+
+.navbar a:hover {
+    /* border-bottom: #fff 2px solid; */
+}
+
+.navbar ul {
+    display: flex;
+    list-style: none;
+}
+
+.navbar ul li {
+    display: inline-block;
+    padding: 1rem;
+    position: relative;
+}
+
+.navbar ul li a {
+
+}
+
+/* Hide Nested ul */
+.navbar ul li ul {
+    display: none;
+}
+
+/* Main */
+.main-container {
+    background: silver;
+    margin: 0.8rem;
+    padding: 1rem;
+}
+
+.fandom-container {
+    display: flex;
+    padding: 1rem;
+    margin: 1rem;
+    text-align: center;
+}
+
+.fic {
+    display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 1rem;
+    border-bottom: 1px solid #333;
+    /* background: white; */
+}
+
+.fic:hover {
+    background: #2d3956;
+    color: #e7e7e7;
+}
+
+.fandom {
+    padding: 0.3rem;
+    display: grid;
+    background: slategray;
+    /* grid-template-rows: 1fr; */
+    /* grid-gap: 1rem; */
+}
+
 /* Footer */
 .footer {
     display: flex;
@@ -53,4 +182,9 @@ body {
     justify-content: center;
     text-align: center;
     height:150px;
+    padding: 1rem;
+}
+
+.footer img {
+    width: 30px;
 }
