--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ a {
 
 /* Main */
 .main-container {
-    background: silver;
+    background: rgba(192, 192, 192, 0.486);
     margin: 0.8rem;
     padding: 1rem;
 }
